--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "node-uuid": "~1.4.1",
     "fakeredis": "~0.1.3",
     "faye": "~1.0.1",
-    "faye-redis": "~0.2.0"
+    "faye-redis": "~0.2.0",
+    "newrelic": "~1.12.1"
   },
   "devDependencies": {
     "mocha": "~1.18.2",
